[tool.poetry]
name = "decision_making"
version = "0.1.0"
description = ""
authors = ["Corrado <corrado.pezzato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
